Fixed the dark mode to stay when you choose, even if you change pages.

--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -805,7 +805,7 @@ input:checked + .slider:before {
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    box-shadow: 0 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.2);
 }
 .conHeadline {
     font-size: 1.2rem;
@@ -816,6 +816,9 @@ input:checked + .slider:before {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+.conText {
+    color: black;
 }
 .inputFullName {
     font-size: 1.2rem;
@@ -888,6 +891,15 @@ input:checked + .slider:before {
 }
 .social-icons:hover {
     background-color: var(--_clr-contacthover);
+}
+.contactMark {
+    padding-top: 20rem;
+    padding-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 100;
+    font-size: 12px;
 }
 /* #rickrolled {
     background-color: #0B0F19;
